--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@notionhq/client": "^2.2.15",
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
+    "@types/moment": "^2.11.29",
+    "@types/moment-timezone": "^0.5.13",
     "@types/node": "^20.11.16",
     "@types/yargs": "^17.0.32",
     "ts-node": "^10.9.2",
