--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "js-yaml": "^4.1.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
